<resources>
    <string name="app_name">Boite Dialog</string>

    <!--String Alert Dialog-->
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading &#8230;</string>
    <string name="lorem_ipsum_dolor_sit_amet">
        "Lorem ipsum dolor sit amet,"\n
    "consecteur adipiscing elit"
    </string>
    <string name="retry">retry</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close_image">close image</string>
    <string name="image_profile">image profile</string>
    <string name="andreson_thomas">Andreson Thomas</string>
    <string name="follow">follow</string>
    <string name="_35_7k">35.7K</string>
    <string name="followers">Followers</string>
    <string name="_215">215</string>
    <string name="following">Following</string>
</resources>
