<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/custom_light"
    android:layout_height="350dp"
    android:background="@drawable/dialog_background_center"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/close_image"
            android:padding="@dimen/activity_horizontal_margin"
            tools:ignore="RtlCompat" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerInParent="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_profile"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/andreson_thomas"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_margin="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum_dolor_sit_amet"
                />

            <Button
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/follow"
                android:textColor="@android:color/white"
                android:background="@drawable/bg_btn"
                android:layout_margin="@dimen/activity_horizontal_margin"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_35_7k"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:textSize="17sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginStart="50dp"
                    tools:ignore="RtlCompat">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_215"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>